# arxiv-notify-bot

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: env.py  main.py  model.py
