[project]
name = "arxiv-notify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "aws-lambda-powertools>=3.18.0",
    "jinja2>=3.1.6",
    "openai>=1.99.6",
    "pydantic-settings>=2.10.1",
    "slack-sdk>=3.36.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
